add_executable(hello hello.c)
add_executable(OJ-1-5 OJ-1-5.c)
add_executable(Test Test.c)
add_executable(OJ-1.6 OJ-1.6.c)
add_executable(OJ-1.7 OJ-1.7.c)
add_executable(Oj-2.1 OJ-2.1.c)
add_executable(Oj-2.2 OJ-2.2.c)
add_executable(Oj-2.4 OJ-2.4.c)
add_executable(Oj-2.3 OJ-2.3.c)
add_executable(Oj-2.5 OJ-2.5.c)
add_executable(Oj-2.6 OJ-2.6.c)
add_executable(Oj-3.1 OJ-3.1.c)
add_executable(OJ-3.2 OJ-3.2.c)
add_executable(OJ-3.3 OJ-3.3.c)
add_executable(OJ-3.3.1 OJ-3.3.1.c)
add_executable(OJ-3.3.2 OJ-3.3.2.c)
add_executable(OJ-3.4 OJ-3.4.c)
add_executable(OJ-3.5 OJ-3.5.c)
add_executable(OJ-3.6 OJ-3.6.c)
add_executable(OJ-4.1 OJ-4.1.c)
add_executable(OJ-4.2 OJ-4.2.c)
add_executable(OJ-4.3 OJ-4.3.c)
add_executable(OJ-4.4 OJ-4.4.c)

