add_executable(A interpreter.c)
add_executable(substr substr.c)
add_executable(title title.c)
add_executable(strs_cat strs_cat.c)
add_executable(testt test.c)
add_executable(strs_interleaf strs_interleaf.c)
add_executable(parse parse.c)
add_executable(tokenizer tokenizer.c)
add_executable(bsearch bsearch.c)
add_executable(split-sort split-sort.c)